# Atomic-Agents

./: .dockerignore  .env.example  .github-app-test  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HANDOFF-PROMPT.md  LICENSE  Makefile  README-PROD.md  README.md  SECURITY.md  docker-compose.ci.yml  docker-compose.l3.yml  docker-compose.test.yml  docker-compose.yml  package.json  pipeline.yaml  pnpm-lock.yaml  pnpm-workspace.yaml  quality.yaml  tsconfig.base.json  turbo.json  vitest.config.journeys.ts
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  deploy.yml  release.yml  terraform.yml  test-full.yml
crates/logline/src/: ast.rs  grammar.pest  lib.rs  parser.rs  serializer.rs
crates/napi-bindings/: Cargo.toml  index.d.ts  index.js  package.json
crates/napi-bindings/src/: lib.rs  logline_api.rs  tdln_in_api.rs  tdln_out_api.rs
crates/tdln-api/: Cargo.toml
crates/tdln-api/src/: handlers.rs  lib.rs  main.rs  metrics.rs  middleware.rs
crates/tdln-core/: Cargo.toml
crates/tdln-core/src/: context.rs  data_model.rs  error.rs  lib.rs  runner.rs  stage.rs
crates/tdln-in/: Cargo.toml
crates/tdln-in/src/: entities.rs  grammar.rs  lib.rs  matcher.rs  normalizer.rs  prover.rs
crates/tdln-in/tests/: integration_tests.rs  roundtrip_tests.rs
crates/tdln-out/: Cargo.toml
crates/tdln-out/src/: citations.rs  lib.rs  renderer.rs  templates.rs
crates/tdln-out/tests/: integration_tests.rs
crates/tdln-policy/: Cargo.toml
crates/tdln-policy/src/: audit.rs  constraints.rs  lib.rs  override.rs  override_system.rs  policy_set.rs  risk.rs  rule.rs  verdict.rs
crates/tdln-quality/: Cargo.toml
crates/tdln-quality/src/: checks.rs  gate.rs  lib.rs  metrics.rs  profile.rs
crates/tdln-registry/: Cargo.toml
crates/tdln-stages/: Cargo.toml
crates/tdln-truthpack/: Cargo.toml
deploy/docker/: Dockerfile.dashboard  Dockerfile.worker  docker-compose.prod.yml
deploy/terraform/: main.tf  variables.tf
docs/: ANALYSIS-2025-11-27.md  PRODUCTION_SMOKE_TEST.md  README.md
docs/_archive/: AGENTIC_RESEARCH_FINDINGS.md  AGENTS.md  Building an AI-Native Engineering Team.md  CODEBASE_SCAN.md  LogLine Language.md  TODO-remaining.md  Testing Strategy.md  ambient.md  old-agents.md  old-api.md  old-architecture.md  plan-phase-2.md  plan.md  recommendations-2025-11-26.md  rust-machinery.md  setup.md
docs/architecture/: agents.md  aws.md  database.md  overview.md
docs/concepts/: budgets.md  philosophy.md
docs/contributing/: guidelines.md
docs/getting-started/: configuration.md  first-job.md  installation.md  quickstart.md
docs/guides/: cloudflare-tunnel-setup.md  github-setup.md  lab512-aws-tunnel.md  monitoring.md  route53-dns-setup.md  testing.md
docs/reference/: api.md  tools.md
examples/sample-repo/: README.md
examples/scenarios/: README.md  bug-fix.yaml  feature-add.yaml
grammars/: coding-intents.yaml  response-templates.yaml
infra/: ecs.tf  lab512-tunnel.tf  main.tf  monitoring.tf  rds.tf  secrets.tf  terraform.tfvars  variables.tf  vpc.tf
scripts/: lab512-aws-setup.sh  lab512-quick-setup.md  lab512-setup-tunnel.sh  lab512-start-all.sh  lab512-start.sh  lab512-tunnel-connect.sh  setup-cloudflare-tunnel.sh  stress-queue.ts  test-github.ts  test-repo-manager.ts
testing/: README.md  test-helpers.ts
testing/aws/: canary.ts  package.json  smoke.ts
testing/l3/: Dockerfile  package.json  runner.js
testing/mock-llm/: Dockerfile  package-lock.json  package.json
testing/prometheus/: prometheus.yml
testing/user-journeys/: 01-job-lifecycle.test.ts  02-data-flow.test.ts  03-multi-agent-collaboration.test.ts  IMPLEMENTATION_SUMMARY.md  README.md  TESTING_GUIDE.md
(+54 files in other folders)
