[package]
name = "tdln-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tdln-core = { path = "../tdln-core" }
tdln-policy = { path = "../tdln-policy" }
tdln-quality = { path = "../tdln-quality" }
tdln-truthpack = { path = "../tdln-truthpack" }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
prometheus = "0.13"