[package]
name = "tdln-out"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "1.0"
handlebars = "4.5"
lazy_static = "1.4"
logline = { path = "../logline" }
