[package]
name = "tdln-policy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Policy enforcement, risk assessment, and audit logging for TDLN"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
